[gd_scene load_steps=55 format=4 uid="uid://cr71vbrmc2m6t"]

[ext_resource type="Script" uid="uid://biyygehq6yxmj" path="res://Codigos/Logicas/menu_merchant.gd" id="1_v7em4"]
[ext_resource type="FontFile" uid="uid://b13xmp6wu4ea" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/6 Font/CraftPixNet Survival Kit.otf" id="2_bsqvj"]
[ext_resource type="Texture2D" uid="uid://cpydwtmtbwllg" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_27.png" id="2_bxvre"]
[ext_resource type="Texture2D" uid="uid://7e6qicro5c8o" path="res://UI/sem org/2 Bars/Band2_on.png" id="3_dmibo"]
[ext_resource type="Texture2D" uid="uid://dj3vfwgbwf2gf" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_58.png" id="3_hrijm"]
[ext_resource type="Texture2D" uid="uid://y6govco4twv7" path="res://UI/sem org/2 Bars/Band2_off.png" id="4_8psce"]
[ext_resource type="Texture2D" uid="uid://dyf86agucincv" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_41.png" id="4_bthnl"]
[ext_resource type="Texture2D" uid="uid://bmro5omyyrlef" path="res://images/one_0108_v01.png" id="5_h533h"]
[ext_resource type="Texture2D" uid="uid://fiiuqnj8tvdh" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_42.png" id="5_uvid5"]
[ext_resource type="Texture2D" uid="uid://bxbxhg818jes0" path="res://CharacterSprites/Arms/spears/spear_1.png" id="6_f8pq4"]
[ext_resource type="Texture2D" uid="uid://cjyapkd01g0ye" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_59.png" id="6_gegsa"]
[ext_resource type="Texture2D" uid="uid://4kypf3twlls3" path="res://UI/sem org/3 Icons/Icons_14.png" id="6_h2o4l"]
[ext_resource type="PackedScene" uid="uid://gigb868grykh" path="res://cenas/item_spec.tscn" id="7_1qnbk"]
[ext_resource type="Texture2D" uid="uid://bol1st4w0cb8q" path="res://CharacterSprites/Arms/shields/shield_1.png" id="7_5tijw"]
[ext_resource type="Texture2D" uid="uid://d1iiqnaqd3rjw" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/TileMap.png" id="7_gegsa"]
[ext_resource type="Texture2D" uid="uid://cicd6ehc2w7jq" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_60.png" id="7_wqtxu"]
[ext_resource type="Texture2D" uid="uid://ukjf82oue1ky" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_71.png" id="8_k5pov"]
[ext_resource type="PackedScene" uid="uid://cdlhjfru12f0w" path="res://cenas/moedas.tscn" id="8_n1i8u"]
[ext_resource type="Texture2D" uid="uid://copwebtv5rd7k" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_72.png" id="9_6fhke"]
[ext_resource type="Texture2D" uid="uid://b2gva1848th72" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_73.png" id="10_uibbv"]
[ext_resource type="Texture2D" uid="uid://d3fmjste5bmng" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_37.png" id="11_h0m0v"]
[ext_resource type="FontFile" uid="uid://dirq4dnsbaakj" path="res://UI/craftpix-781165-game-ui-pixel-art (1)/Font/Planes_ValMore.ttf" id="11_w1b0y"]
[ext_resource type="Texture2D" uid="uid://c1p6w7fefubil" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_38.png" id="12_0ipwx"]
[ext_resource type="PackedScene" uid="uid://delx88t4jwfoh" path="res://cenas/slot.tscn" id="12_q3u1m"]
[ext_resource type="Texture2D" uid="uid://0q4rxdjfvyaj" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_39.png" id="13_y3uxf"]
[ext_resource type="Texture2D" uid="uid://i6knpqiu2vwx" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_40.png" id="14_ugfal"]
[ext_resource type="Texture2D" uid="uid://bjs7ae3j5te1e" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/1 Interface/Tile_46.png" id="15_bthnl"]
[ext_resource type="Texture2D" uid="uid://dckgvjj6um2eq" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/1 Frames/Frame2.png" id="25_hrijm"]
[ext_resource type="FontFile" uid="uid://bxc4ricmbdl" path="res://UI/craftpix-net-420010-pixel-game-user-interface-for-platformer/TinyFontCraftpixPixel.otf" id="25_wqtxu"]
[ext_resource type="Texture2D" uid="uid://dqm1pgg4d2fbg" path="res://UI/sem org/3 Icons/Icons_37.png" id="28_uvid5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ht87"]
texture = ExtResource("2_bxvre")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8v2qv"]
texture = ExtResource("3_hrijm")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xv1lv"]
texture = ExtResource("4_bthnl")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p73in"]
texture = ExtResource("5_uvid5")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i0efs"]
texture = ExtResource("6_gegsa")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wqtxu"]
texture = ExtResource("7_gegsa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p0f21"]
texture = ExtResource("7_wqtxu")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2iph0"]
texture = ExtResource("8_k5pov")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_25xje"]
texture = ExtResource("9_6fhke")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b11qo"]
texture = ExtResource("10_uibbv")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hskqe"]
texture = ExtResource("11_h0m0v")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rym5i"]
texture = ExtResource("12_0ipwx")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wqwxk"]
texture = ExtResource("13_y3uxf")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lqonb"]
texture = ExtResource("14_ugfal")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_y5jgf"]
sources/0 = SubResource("TileSetAtlasSource_3ht87")
sources/1 = SubResource("TileSetAtlasSource_8v2qv")
sources/2 = SubResource("TileSetAtlasSource_p0f21")
sources/3 = SubResource("TileSetAtlasSource_2iph0")
sources/4 = SubResource("TileSetAtlasSource_25xje")
sources/5 = SubResource("TileSetAtlasSource_b11qo")
sources/6 = SubResource("TileSetAtlasSource_hskqe")
sources/7 = SubResource("TileSetAtlasSource_rym5i")
sources/8 = SubResource("TileSetAtlasSource_wqwxk")
sources/9 = SubResource("TileSetAtlasSource_lqonb")
sources/10 = SubResource("TileSetAtlasSource_xv1lv")
sources/11 = SubResource("TileSetAtlasSource_p73in")
sources/12 = SubResource("TileSetAtlasSource_i0efs")
sources/13 = SubResource("TileSetAtlasSource_wqtxu")

[sub_resource type="LabelSettings" id="LabelSettings_irua0"]
font = ExtResource("2_bsqvj")
font_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o8dq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkw6o"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_k5pov"]
font = ExtResource("25_wqtxu")
font_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wqtxu"]
font = ExtResource("25_wqtxu")
font_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qlgqn"]
font = ExtResource("2_bsqvj")
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxn4l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0ns6"]
bg_color = Color(0.517561, 0.580081, 0.863594, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_7wpx7"]
font = ExtResource("2_bsqvj")
font_size = 12
shadow_color = Color(0, 0, 0, 1)

[node name="MenuMerchant" type="Node2D"]
z_index = 500
scale = Vector2(0.7, 0.7)
script = ExtResource("1_v7em4")

[node name="Tile59" type="Sprite2D" parent="."]
position = Vector2(-148.571, -42.8571)
texture = ExtResource("6_gegsa")

[node name="Tile60" type="Sprite2D" parent="."]
position = Vector2(144.286, -41.4286)
texture = ExtResource("6_gegsa")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAgABQAAAAAAAAAJAAcAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAP//AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP3/AgAAAAAAAAD3//3/DAAAAAAAAAD3//7/DAAAAAAAAAD3////DAAAAAAAAAD3/wAADAAAAAAAAAD3/wEADAAAAAAAAAD3/wIADAAAAAAAAAD3/wMADAAAAAAAAAD3/wQADAAAAAAAAAD3/wUADAAAAAAAAAD3/wYADAAAAAAAAAD3/wcADAAAAAAAAAD4//3/DAAAAAAAAAD4//7/DAAAAAAAAAD4////DAAAAAAAAAD4/wAADAAAAAAAAAD4/wEADAAAAAAAAAD4/wIADAAAAAAAAAD4/wMADAAAAAAAAAD4/wQADAAAAAAAAAD4/wUADAAAAAAAAAD4/wYADAAAAAAAAAD4/wcADAAAAAAAAAD5//3/DAAAAAAAAAD5//7/DAAAAAAAAAD5////DAAAAAAAAAD5/wAADAAAAAAAAAD5/wEADAAAAAAAAAD5/wIADAAAAAAAAAD5/wMADAAAAAAAAAD5/wQADAAAAAAAAAD5/wUADAAAAAAAAAD5/wYADAAAAAAAAAD5/wcADAAAAAAAAAD6//3/DAAAAAAAAAD6//7/DAAAAAAAAAD6////DAAAAAAAAAD6/wAADAAAAAAAAAD6/wEADAAAAAAAAAD6/wIADAAAAAAAAAD6/wMADAAAAAAAAAD6/wQADAAAAAAAAAD6/wUADAAAAAAAAAD6/wYADAAAAAAAAAD6/wcADAAAAAAAAAD7//3/DAAAAAAAAAD7//7/DAAAAAAAAAD7////DAAAAAAAAAD7/wAADAAAAAAAAAD7/wEADAAAAAAAAAD7/wIADAAAAAAAAAD7/wMADAAAAAAAAAD7/wQADAAAAAAAAAD7/wUADAAAAAAAAAD7/wYADAAAAAAAAAD7/wcADAAAAAAAAAD8//3/DAAAAAAAAAD8//7/DAAAAAAAAAD8////DAAAAAAAAAD8/wAADAAAAAAAAAD8/wEADAAAAAAAAAD8/wIADAAAAAAAAAD8/wMADAAAAAAAAAD8/wQADAAAAAAAAAD8/wUADAAAAAAAAAD8/wYADAAAAAAAAAD8/wcADAAAAAAAAAD9//3/DAAAAAAAAAD9//7/DAAAAAAAAAD9////DAAAAAAAAAD9/wAADAAAAAAAAAD9/wEADAAAAAAAAAD9/wIADAAAAAAAAAD9/wMADAAAAAAAAAD9/wQADAAAAAAAAAD9/wUADAAAAAAAAAD9/wYADAAAAAAAAAD9/wcADAAAAAAAAAD+//3/DAAAAAAAAAD+//7/DAAAAAAAAAD+////DAAAAAAAAAD+/wAADAAAAAAAAAD+/wEADAAAAAAAAAD+/wIADAAAAAAAAAD+/wMADAAAAAAAAAD+/wQADAAAAAAAAAD+/wUADAAAAAAAAAD+/wYADAAAAAAAAAD+/wcADAAAAAAAAAD///3/DAAAAAAAAAD///7/DAAAAAAAAAD/////DAAAAAAAAAD//wAADAAAAAAAAAD//wEADAAAAAAAAAD//wIADAAAAAAAAAD//wMADAAAAAAAAAD//wQADAAAAAAAAAD//wUADAAAAAAAAAD//wYADAAAAAAAAAD//wcADAAAAAAAAAAAAP3/DAAAAAAAAAAAAP7/DAAAAAAAAAAAAP//DAAAAAAAAAAAAAAADAAAAAAAAAAAAAEADAAAAAAAAAAAAAIADAAAAAAAAAAAAAMADAAAAAAAAAAAAAQADAAAAAAAAAAAAAUADAAAAAAAAAAAAAYADAAAAAAAAAAAAAcADAAAAAAAAAABAP3/DAAAAAAAAAABAP7/DAAAAAAAAAABAP//DAAAAAAAAAABAAAADAAAAAAAAAABAAEADAAAAAAAAAABAAIADAAAAAAAAAABAAMADAAAAAAAAAABAAQADAAAAAAAAAABAAUADAAAAAAAAAABAAYADAAAAAAAAAABAAcADAAAAAAAAAACAP3/DAAAAAAAAAACAP7/DAAAAAAAAAACAP//DAAAAAAAAAACAAAADAAAAAAAAAACAAEADAAAAAAAAAACAAIADAAAAAAAAAACAAMADAAAAAAAAAACAAQADAAAAAAAAAACAAUADAAAAAAAAAACAAYADAAAAAAAAAACAAcADAAAAAAAAAADAP3/DAAAAAAAAAADAP7/DAAAAAAAAAADAP//DAAAAAAAAAADAAAADAAAAAAAAAADAAEADAAAAAAAAAADAAIADAAAAAAAAAADAAMADAAAAAAAAAADAAQADAAAAAAAAAADAAUADAAAAAAAAAADAAYADAAAAAAAAAADAAcADAAAAAAAAAAEAP3/DAAAAAAAAAAEAP7/DAAAAAAAAAAEAP//DAAAAAAAAAAEAAAADAAAAAAAAAAEAAEADAAAAAAAAAAEAAIADAAAAAAAAAAEAAMADAAAAAAAAAAEAAQADAAAAAAAAAAEAAUADAAAAAAAAAAEAAYADAAAAAAAAAAEAAcADAAAAAAAAAAFAP3/DAAAAAAAAAAFAP7/DAAAAAAAAAAFAP//DAAAAAAAAAAFAAAADAAAAAAAAAAFAAEADAAAAAAAAAAFAAIADAAAAAAAAAAFAAMADAAAAAAAAAAFAAQADAAAAAAAAAAFAAUADAAAAAAAAAAFAAYADAAAAAAAAAAFAAcADAAAAAAAAAAGAP3/DAAAAAAAAAAGAP7/DAAAAAAAAAAGAP//DAAAAAAAAAAGAAAADAAAAAAAAAAGAAEADAAAAAAAAAAGAAIADAAAAAAAAAAGAAMADAAAAAAAAAAGAAQADAAAAAAAAAAGAAUADAAAAAAAAAAGAAYADAAAAAAAAAAGAAcADAAAAAAAAAAHAP3/DAAAAAAAAAAHAP7/DAAAAAAAAAAHAP//DAAAAAAAAAAHAAAADAAAAAAAAAAHAAEADAAAAAAAAAAHAAIADAAAAAAAAAAHAAMADAAAAAAAAAAHAAQADAAAAAAAAAAHAAUADAAAAAAAAAAHAAYADAAAAAAAAAAHAAcADAAAAAAAAAAIAP3/DAAAAAAAAAAIAP7/DAAAAAAAAAAIAP//DAAAAAAAAAAIAAAADAAAAAAAAAAIAAEADAAAAAAAAAAIAAIADAAAAAAAAAAIAAMADAAAAAAAAAAIAAQADAAAAAAAAAAIAAUADAAAAAAAAAAIAAYADAAAAAAAAAAIAAcADAAAAAAAAAA=")
tile_set = SubResource("TileSet_y5jgf")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAgABQAAAAAAAAAJAAcAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAP//AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP3/AgAAAAAAAAAJAPz/CAAAAAAAAAAIAPz/BwAAAAAAAAAHAPz/BwAAAAAAAAAGAPz/BwAAAAAAAAAFAPz/BwAAAAAAAAAEAPz/BwAAAAAAAAADAPz/BwAAAAAAAAACAPz/BwAAAAAAAAABAPz/BwAAAAAAAAAAAPz/BwAAAAAAAAD///z/BwAAAAAAAAD+//z/BwAAAAAAAAD9//z/BwAAAAAAAAD8//z/BwAAAAAAAAD7//z/BwAAAAAAAAD6//z/BwAAAAAAAAD5//z/BwAAAAAAAAD4//z/BwAAAAAAAAD3//z/BwAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD2/wAAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wYAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wgAAwAAAAAAAAD3/wgABAAAAAAAAAD4/wgABAAAAAAAAAD5/wgABAAAAAAAAAD6/wgABAAAAAAAAAD7/wgABAAAAAAAAAD8/wgABAAAAAAAAAD9/wgABAAAAAAAAAD+/wgABAAAAAAAAAD//wgABAAAAAAAAAAAAAgABAAAAAAAAAABAAgABAAAAAAAAAACAAgABAAAAAAAAAADAAgABAAAAAAAAAAEAAgABAAAAAAAAAAFAAgABAAAAAAAAAAGAAgABAAAAAAAAAAHAAgABAAAAAAAAAAIAAgABAAAAAAAAAD2//z/BgAAAAAAAAA=")
tile_set = SubResource("TileSet_y5jgf")

[node name="Armas" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -159.0
offset_top = -58.1428
offset_right = 165.0
offset_bottom = 145.857
mouse_filter = 2

[node name="Braco" type="Control" parent="Armas"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Band2Off" type="Sprite2D" parent="Armas/Braco"]
position = Vector2(39.2679, 35.6904)
scale = Vector2(2.82366, 2.90774)
texture = ExtResource("15_bthnl")

[node name="espada" type="TextureButton" parent="Armas/Braco"]
layout_mode = 0
offset_left = 14.0
offset_top = 59.0
offset_right = 64.0
offset_bottom = 71.0
texture_normal = ExtResource("3_dmibo")
texture_pressed = ExtResource("4_8psce")
stretch_mode = 0

[node name="Texto" type="Label" parent="Armas/Braco/espada"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 12.0
text = "EQUIP"
label_settings = SubResource("LabelSettings_irua0")
horizontal_alignment = 1

[node name="sword2" type="Sprite2D" parent="Armas/Braco"]
position = Vector2(39, 32)
scale = Vector2(2.16667, 1.59524)
texture = ExtResource("5_h533h")
hframes = 17
vframes = 6

[node name="Lanca" type="Control" parent="Armas"]
anchors_preset = 0
offset_left = 69.0
offset_top = -1.0
offset_right = 144.0
offset_bottom = 82.0

[node name="Band2Off" type="Sprite2D" parent="Armas/Lanca"]
position = Vector2(38.5714, 36.1904)
scale = Vector2(2.85714, 2.84524)
texture = ExtResource("15_bthnl")

[node name="lanca" type="TextureButton" parent="Armas/Lanca"]
layout_mode = 0
offset_left = 14.0
offset_top = 59.0
offset_right = 64.0
offset_bottom = 71.0
texture_normal = ExtResource("3_dmibo")
texture_pressed = ExtResource("4_8psce")
stretch_mode = 0

[node name="Texto" type="Label" parent="Armas/Lanca/lanca"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 12.0
text = "EQUIP"
label_settings = SubResource("LabelSettings_irua0")
horizontal_alignment = 1

[node name="spear2" type="Sprite2D" parent="Armas/Lanca"]
position = Vector2(50, 46)
scale = Vector2(1.3, 0.957)
texture = ExtResource("6_f8pq4")
hframes = 8
vframes = 8
frame = 14

[node name="Escudo" type="Control" parent="Armas"]
anchors_preset = 0
offset_left = 136.143
offset_top = -1.8572
offset_right = 176.143
offset_bottom = 38.1428

[node name="Band2Off" type="Sprite2D" parent="Armas/Escudo"]
position = Vector2(38.5713, 37.1429)
scale = Vector2(2.85714, 2.85714)
texture = ExtResource("15_bthnl")

[node name="Escudo" type="TextureButton" parent="Armas/Escudo"]
layout_mode = 0
offset_left = 14.0
offset_top = 59.0
offset_right = 64.0
offset_bottom = 71.0
texture_normal = ExtResource("3_dmibo")
texture_pressed = ExtResource("4_8psce")
stretch_mode = 0

[node name="Texto" type="Label" parent="Armas/Escudo/Escudo"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 12.0
text = "EQUIP"
label_settings = SubResource("LabelSettings_irua0")
horizontal_alignment = 1

[node name="shield" type="Sprite2D" parent="Armas/Escudo"]
position = Vector2(37.1429, 31.7143)
scale = Vector2(2, 1.472)
texture = ExtResource("7_5tijw")
hframes = 8
vframes = 8
frame = 32

[node name="Botoes" type="Panel" parent="."]
offset_left = -160.0
offset_top = -57.1428
offset_right = -120.0
offset_bottom = -17.1428
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4o8dq")

[node name="IniciarOnda" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 110.0
offset_top = 46.0
offset_right = 216.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_bsqvj")
theme_override_styles/focus = SubResource("StyleBoxFlat_tkw6o")
text = "START WAVE"
flat = true

[node name="opcaoArmas" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 110.0
offset_top = 69.0
offset_right = 216.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "WEAPONS
"
flat = true

[node name="Construir" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 110.0
offset_top = 94.0
offset_right = 216.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "BUILD
"
flat = true

[node name="Sair" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 133.0
offset_top = 149.0
offset_right = 196.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "LEAVE
"
flat = true

[node name="Atualizar" type="Button" parent="Botoes"]
layout_mode = 0
offset_left = 131.0
offset_top = 122.0
offset_right = 197.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("2_bsqvj")
text = "ANVIL
"
flat = true

[node name="ContainerItens" type="GridContainer" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -57.1428
offset_right = -160.0
offset_bottom = -57.1428
grow_vertical = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 5

[node name="EspecificacaoItem" parent="." instance=ExtResource("7_1qnbk")]
visible = false
offset_left = 7.14286
offset_top = -42.5714
offset_right = 157.143
offset_bottom = 150.428
mouse_filter = 2

[node name="Moedas" parent="." instance=ExtResource("8_n1i8u")]
visible = false
offset_left = -154.714
offset_top = 114.143
offset_right = -114.714
offset_bottom = 154.143
mouse_filter = 2

[node name="Atualizar" type="Node2D" parent="."]
visible = false
position = Vector2(-160, -57.1428)

[node name="InfoItemUpgrade" type="TileMapLayer" parent="Atualizar"]
visible = false
position = Vector2(160, 57.1428)
tile_map_data = PackedByteArray("AAD9/wQADQAGAAUAAAD9/wUADQAGAAUAAAD9/wYADQAGAAYAAAD+/wYADQAHAAYAAAD//wYADQAHAAYAAAAAAAYADQAHAAYAAAABAAYADQAHAAYAAAACAAYADQAIAAYAAAACAAUADQAIAAUAAAACAAQADQAIAAUAAAACAAMADQAIAAUAAAD9/wMADQAGAAUAAAD9/wIADQAGAAYAAFD+/wIADQAHAAYAADD//wIADQAHAAYAADAAAAIADQAHAAYAADABAAIADQAHAAYAADACAAIADQAIAAYAAGD+/wMADQAHAAUAAAD//wMADQAHAAUAAAAAAAMADQAHAAUAAAABAAMADQAHAAUAAAABAAQADQAHAAUAAAABAAUADQAHAAUAAAAAAAUADQAHAAUAAAD//wUADQAHAAUAAAD+/wUADQAHAAUAAAD+/wQADQAHAAUAAAD//wQADQAHAAUAAAAAAAQADQAHAAUAAAA=")
tile_set = SubResource("TileSet_y5jgf")

[node name="ConteudoTextos" type="Control" parent="Atualizar/InfoItemUpgrade"]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = 40.0
offset_right = 41.0
offset_bottom = 106.0

[node name="FOR" type="Label" parent="Atualizar/InfoItemUpgrade/ConteudoTextos"]
layout_mode = 0
offset_right = 81.0
offset_bottom = 13.0
text = "1"
label_settings = SubResource("LabelSettings_k5pov")
horizontal_alignment = 1

[node name="DAN" type="Label" parent="Atualizar/InfoItemUpgrade/ConteudoTextos"]
layout_mode = 0
offset_top = 11.4286
offset_right = 81.0
offset_bottom = 27.4286
text = "1"
label_settings = SubResource("LabelSettings_k5pov")
horizontal_alignment = 1

[node name="DEF" type="Label" parent="Atualizar/InfoItemUpgrade/ConteudoTextos"]
layout_mode = 0
offset_right = 81.0
offset_bottom = 16.0
text = "1"
label_settings = SubResource("LabelSettings_k5pov")
horizontal_alignment = 1

[node name="VIT" type="Label" parent="Atualizar/InfoItemUpgrade/ConteudoTextos"]
layout_mode = 0
offset_top = 11.4286
offset_right = 81.0
offset_bottom = 27.4286
text = "1"
label_settings = SubResource("LabelSettings_k5pov")
horizontal_alignment = 1

[node name="NIVEL" type="Label" parent="Atualizar/InfoItemUpgrade/ConteudoTextos"]
layout_mode = 0
offset_left = 1.42857
offset_top = 27.1429
offset_right = 82.4286
offset_bottom = 94.1429
text = "WAVE 4 REQUIRED"
label_settings = SubResource("LabelSettings_wqtxu")
horizontal_alignment = 1

[node name="Slot" parent="Atualizar" groups=["shield_basic", "spear_basic", "sword_basic"] instance=ExtResource("12_q3u1m")]
z_index = 100
position = Vector2(160, 57.1429)

[node name="Anvil" type="Label" parent="Atualizar"]
offset_left = -0.428574
offset_top = 7.71428
offset_right = 324.571
offset_bottom = 35.7143
text = "ANVIL"
label_settings = SubResource("LabelSettings_qlgqn")
horizontal_alignment = 1

[node name="CliqueUpgrade" type="Button" parent="Atualizar"]
offset_left = 108.571
offset_top = 170.0
offset_right = 211.571
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("11_w1b0y")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxFlat_bxn4l")
theme_override_styles/normal = SubResource("StyleBoxFlat_h0ns6")
text = "UPGRADE
"

[node name="Sprite2D" type="Sprite2D" parent="Atualizar"]
position = Vector2(160, 57.1428)
scale = Vector2(0.714286, 1.90476)
texture = ExtResource("3_dmibo")

[node name="Label" type="Label" parent="Atualizar"]
offset_left = 4.0
offset_top = 77.0
offset_right = 313.0
offset_bottom = 100.0
text = "DRAG THE EQUIP "
label_settings = SubResource("LabelSettings_7wpx7")
horizontal_alignment = 1

[node name="Moldura2" type="Sprite2D" parent="."]
position = Vector2(-152.071, -56.3571)
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_hrijm")

[node name="Frame3" type="Sprite2D" parent="."]
position = Vector2(155.714, -60)
scale = Vector2(0.5, 0.5)
texture = ExtResource("25_hrijm")

[node name="BotaoVoltar" type="Button" parent="."]
z_index = 2
offset_left = -157.786
offset_top = -62.0714
offset_right = -141.786
offset_bottom = -47.0714
scale = Vector2(0.8, 0.8)
icon = ExtResource("6_h2o4l")
flat = true
expand_icon = true

[node name="CloseModal" type="Button" parent="."]
offset_left = 151.429
offset_top = -64.2856
offset_right = 183.429
offset_bottom = -32.2856
scale = Vector2(0.28, 0.28)
icon = ExtResource("28_uvid5")
flat = true

[connection signal="pressed" from="Armas/Braco/espada" to="." method="_on_espada_pressionado"]
[connection signal="pressed" from="Armas/Lanca/lanca" to="." method="_on_lanca_pressionado"]
[connection signal="pressed" from="Armas/Escudo/Escudo" to="." method="_on_escudo_pressionado"]
[connection signal="pressed" from="Botoes/IniciarOnda" to="." method="_on_iniciar_onda_pressionado"]
[connection signal="pressed" from="Botoes/opcaoArmas" to="." method="_on_armas_pressionado"]
[connection signal="pressed" from="Botoes/Construir" to="." method="_on_construir_pressionado"]
[connection signal="pressed" from="Botoes/Sair" to="." method="_on_botao_voltar_pressionado"]
[connection signal="pressed" from="Botoes/Atualizar" to="." method="_on_atualizar_pressionado"]
[connection signal="pressed" from="Atualizar/CliqueUpgrade" to="." method="_on_clique_upgrade_pressionado"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_botao_voltar_pressionado"]
[connection signal="pressed" from="CloseModal" to="." method="_on_sair_pressionado"]
